--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/ic": "^1.1.17",
+    "@iconify-json/material-symbols": "^1.1.80",
+    "@iconify-json/ph": "^1.1.13",
     "@nuxt/ui": "^2.16.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
