--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@iconify-json/ic": "^1.1.17",
     "@iconify-json/material-symbols": "^1.1.80",
     "@iconify-json/ph": "^1.1.13",
+    "@iconify-json/twemoji": "^1.1.15",
     "@nuxt/ui": "^2.16.0",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
