--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@iconify-json/twemoji": "^1.1.15",
     "@nuxt/ui": "^2.16.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "@pinia/nuxt": "^0.5.1",
+    "@pinia/nuxt": "^0.5.2",
+    "@vuepic/vue-datepicker": "^9.0.1",
     "nuxt": "^3.12.2",
-    "pinia": "^2.1.7",
+    "pinia": "^2.2.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   }
