--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "pinia": "^2.2.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@vueuse/core": "^10.11.1",
+    "@vueuse/nuxt": "^10.11.1"
   }
 }
