--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
     "@nuxt/ui": "^2.16.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.2",
+    "@unovis/ts": "^1.4.5",
+    "@unovis/vue": "^1.4.5",
     "@vuepic/vue-datepicker": "^9.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.462.0",
     "nuxt": "^3.12.2",
     "pinia": "^2.2.0",
+    "radix-vue": "^1.9.10",
+    "shadcn-nuxt": "^0.11.3",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
